# ROS-Robotics-Project

./: README.md
first_project/: car.mov  description.txt
first_project/src/: CMakeLists.txt  package.xml
first_project/src/cfg/: parameters.cfg
first_project/src/launch/: first_project.launch  lla2enu.launch
first_project/src/msg/: stat.msg
first_project/src/src/: client.cpp  computeDist.cpp  lla2enu.cpp  publisher.cpp
second_project/: description.txt
second_project/src/: CMakeLists.txt  package.xml
second_project/src/launch/: EKF_DataFusion.xml  pointCloud2LaserScan.xml
second_project/src/launch/amcl/: amcl_config.xml  move_base_amcl.launch
second_project/src/launch/map_generate/: optitrack.launch  visual.launch
second_project/src/map/optitrack/: firstBagMap.yaml  secondBagMap.yaml
second_project/src/map/visual/: firstBag_IMU.yaml
second_project/src/rviz/: amcl_test.rviz  ekf_config.rviz
