<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>The secondProject package</description>
  <license>OPENSOURCEEEEE</license> 
  <maintainer email="g.avvisati@protonmail.com">Giulio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
